WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
197763
Fix crashes related to pointer authentication for primitive gigacage
https://bugs.webkit.org/show_bug.cgi?id=197763
Summary
Fix crashes related to pointer authentication for primitive gigacage
Keith Miller
Reported
2019-05-09 18:06:39 PDT
Fix crashes related to pointer authentication for primitive gigacage
Attachments
Patch
(3.38 KB, patch)
2019-05-09 18:15 PDT
,
Keith Miller
no flags
Details
Formatted Diff
Diff
Patch for landing
(3.43 KB, patch)
2019-05-09 18:21 PDT
,
Keith Miller
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Keith Miller
Comment 1
2019-05-09 18:15:36 PDT
Created
attachment 369536
[details]
Patch
Keith Miller
Comment 2
2019-05-09 18:21:35 PDT
Created
attachment 369537
[details]
Patch for landing
Keith Miller
Comment 3
2019-05-09 18:25:16 PDT
rdar://problem/50629257
WebKit Commit Bot
Comment 4
2019-05-09 19:02:37 PDT
Comment on
attachment 369537
[details]
Patch for landing Clearing flags on attachment: 369537 Committed
r245168
: <
https://trac.webkit.org/changeset/245168
>
WebKit Commit Bot
Comment 5
2019-05-09 19:02:39 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug