Cherry-pick r245168. rdar://problem/50629257

Fix crashes related to pointer authentication for primitive gigacage
    https://bugs.webkit.org/show_bug.cgi?id=197763
    <rdar://problem/50629257>

    Reviewed by Saam Barati.

    This fixes two bugs related to PAC for caging. The first is that
    we didn't clear the high bits of the size register going into the
    patchpoint to tag the new buffer for NewArrayBuffer. The second is
    that the GC needs to strip all stack pointers when considering
    them as a conservative root.

    * ftl/FTLLowerDFGToB3.cpp:
    (JSC::FTL::DFG::LowerDFGToB3::compileNewTypedArray):
    * heap/ConservativeRoots.cpp:
    (JSC::ConservativeRoots::genericAddPointer):

    Canonical link: https://commits.webkit.org/211908@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@245168 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/211878.27@safari-608.1.24-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-608.1.24-branch@245378 268f45cc-cd09-0410-ab3c-d52691b4dbfc